samples/_failures_safe/1761516269_70e1af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee484ea9.c: In function ‘main’:
./samples/SAFE/__tmp_ee484ea9.c:181: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ee484ea9.c:180:5: error: expected declaration or statement at end of input
  180 |     if
      |     ^~
